feat: add pagination for get all exams endpoint & handle get exam logic for different roles